[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/LiberationSerif-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://UI/LevelSelection.gd" type="Script" id=3]
[ext_resource path="res://ButtonTheme.tres" type="Theme" id=4]

[sub_resource type="Gradient" id=4]
offsets = PoolRealArray( 0, 0, 1 )
colors = PoolColorArray( 0, 0.0235294, 0.403922, 1, 0, 0.462745, 1, 1, 0.603922, 0.878431, 1, 1 )

[sub_resource type="GradientTexture" id=5]
gradient = SubResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 2 )

[node name="Control" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = 13179.0
margin_top = -273.0
margin_right = 14814.0
margin_bottom = 14330.0
grow_horizontal = 2
grow_vertical = 2
rect_rotation = 90.0
texture = SubResource( 5 )
expand = true

[node name="Text" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.3
anchor_right = 0.5
anchor_bottom = 0.3
margin_left = -147.5
margin_top = -36.0
margin_right = 147.5
margin_bottom = 36.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 2 )
text = "Levels"
align = 1

[node name="ReturnButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.9
anchor_right = 0.5
anchor_bottom = 0.9
margin_left = -93.0
margin_top = -78.0
margin_right = 93.0
theme = ExtResource( 4 )
custom_fonts/font = SubResource( 1 )
text = "Return"

[node name="Level1" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -216.0
margin_top = -39.0
margin_right = -101.0
margin_bottom = 39.0
theme = ExtResource( 4 )
custom_fonts/font = SubResource( 1 )
text = "1"

[node name="Level2" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -45.0
margin_top = -39.0
margin_right = 70.0
margin_bottom = 39.0
theme = ExtResource( 4 )
custom_fonts/font = SubResource( 1 )
text = "2"

[connection signal="pressed" from="ReturnButton" to="." method="_on_ReturnButton_pressed"]
[connection signal="pressed" from="Level1" to="." method="_on_Level1_pressed"]
[connection signal="pressed" from="Level2" to="." method="_on_Level2_pressed"]
